--- a/test/XxxPersistenceSpringMongoTest_java.vm
+++ b/test/XxxPersistenceSpringMongoTest_java.vm
@@ -1,17 +1,21 @@
 
 package ${target.javaPackageFromFolder($TEST_SRC)};
 
-import org.demo.persistence.${entity.name}Persistence ;
 import org.demo.persistence.${entity.name}PersistenceGenericTest;
 import org.demo.data.record.${entity.name}Record;
 import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.mongodb.core.MongoTemplate;
+import org.demo.persistence.impl.springMongo.commons.MongoConfig;
 import org.demo.persistence.impl.springMongo.commons.MongoEmbedded;
-import org.demo.persistence.impl.springMongo.commons.SpringMongoTemplate;
 import org.junit.After;
-import org.junit.Before;
 import org.junit.BeforeClass;
 import java.util.logging.*;
+import org.springframework.test.annotation.DirtiesContext;
+import org.springframework.test.annotation.DirtiesContext.ClassMode;
+import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 
 /**
  * JUnit tests for Car persistence service
@@ -19,9 +23,13 @@ import java.util.logging.*;
  * @author Telosys Tools
  *
  */
+@RunWith(SpringJUnit4ClassRunner.class)
+@ContextConfiguration(classes = MongoConfig.class)
+@DirtiesContext(classMode = ClassMode.AFTER_CLASS)
 public class ${entity.name}PersistenceSpringMongoTest extends ${entity.name}PersistenceGenericTest {
+
 	private static final Logger LOGGER = Logger.getLogger(${entity.name}PersistenceSpringMongoTest.class.getName());
-    private ${entity.name}Persistence persistenceService;
+	@Autowired
 	private MongoTemplate mongoTemplate;
 
 	@BeforeClass
@@ -33,12 +41,6 @@ public class ${entity.name}PersistenceSpringMongoTest extends ${entity.name}Pers
 		}
 	}
 
-	@Before
-	public void setUp() throws Exception {
-		mongoTemplate = SpringMongoTemplate.getMongotemplate();
-		persistenceService = new ${entity.name}PersistenceSpringMongo(mongoTemplate);
-	}
-
 	@After
 	public void tearDown() throws Exception {
 		mongoTemplate.dropCollection(${entity.name}Record.class);
@@ -46,7 +48,10 @@ public class ${entity.name}PersistenceSpringMongoTest extends ${entity.name}Pers
 
 	@Test
 	public void testPersistenceService() throws Exception {
-    	testPersistenceService(persistenceService);
+
+		${entity.name}PersistenceSpringMongo persistence = new ${entity.name}PersistenceSpringMongo();
+		persistence.setMongoTemplate(mongoTemplate);
+    	testPersistenceService(persistence);
 	}
 
 }
